feat: improving services, adding local database luncher, adding mappers
