# src/main/kotlin/tech/pacifici/patronus/controller/PatronusPostControllerApi.kt
@@ -6,22 +6,28 @@ import org.springframework.web.bind.annotation.RestController
 import tech.pacifici.patronus.api.PatronusPostsApi
 import tech.pacifici.patronus.model.CommentRequest
 import tech.pacifici.patronus.model.CommentResponse
+import tech.pacifici.patronus.model.PagedResponsePostResponse
 import tech.pacifici.patronus.model.PostRequest
 import tech.pacifici.patronus.model.PostResponse
+import tech.pacifici.patronus.service.CommentService
+import tech.pacifici.patronus.service.PostService
 import java.util.UUID
 
 /**
  * REST controller implementation for the Patronus API.
  * This class provides endpoints for managing users, posts, comments, and friendships.
- * It implements the [PatronusApi] interface and handles HTTP requests related to the core features of the Patronus application.
+ * It implements the [PatronusPostsApi] interface and handles HTTP requests related to the core features of the Patronus application.
  */
 @RestController
-class PatronusPostControllerApi : PatronusPostsApi {
+class PatronusPostControllerApi(
+    private val postService: PostService,
+    private val commentService: CommentService,
+) : PatronusPostsApi {
     /**
      * Creates a new comment.
-     * @param id The Id of the comment
+     * @param id The ID of the post to which the comment is added
      * @param xRequestId The x-request-id of the call
-     * @param xCorrelationId The correlation Id associated to the flow o calls
+     * @param xCorrelationId The correlation ID associated with the flow of calls
      * @param commentRequest The request body containing the details of the comment to create.
      * @return A [ResponseEntity] containing the created [CommentResponse] and HTTP status.
      */
@@ -31,15 +37,19 @@ class PatronusPostControllerApi : PatronusPostsApi {
         xCorrelationId: UUID,
         commentRequest: CommentRequest,
     ): ResponseEntity<CommentResponse> {
-        // TODO: implement the logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+        require(commentRequest.content.isNullOrBlank()) { "Content is empty" }
+        require(commentRequest.userId == null) { "User Id not provided" }
+
+        val commentResponse = commentService.create(commentRequest)
+
+        return ResponseEntity.status(HttpStatus.CREATED).body(commentResponse)
     }
 
     /**
      * Creates a new post.
      *
      * @param xRequestId The x-request-id of the call
-     * @param xCorrelationId The correlation Id associated to the flow o calls
+     * @param xCorrelationId The correlation ID associated with the flow of calls
      * @param postRequest The request body containing the details of the post to create.
      * @return A [ResponseEntity] containing the created [PostResponse] and HTTP status.
      */
@@ -48,8 +58,11 @@ class PatronusPostControllerApi : PatronusPostsApi {
         xCorrelationId: UUID,
         postRequest: PostRequest,
     ): ResponseEntity<PostResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+        require(!postRequest.content.isNullOrBlank()) { "Content cannot be empty" }
+        require(postRequest.userId != null) { "UserID cannot be empty" }
+
+        val postResponse: PostResponse = postService.create(postRequest)
+        return ResponseEntity.status(HttpStatus.CREATED).body(postResponse)
     }
 
     /**
@@ -57,7 +70,7 @@ class PatronusPostControllerApi : PatronusPostsApi {
      *
      * @param id The ID of the post to delete.
      * @param xRequestId The x-request-id of the call
-     * @param xCorrelationId The correlation Id associated to the flow o calls
+     * @param xCorrelationId The correlation ID associated with the flow of calls
      * @return A [ResponseEntity] with HTTP status indicating the result of the operation.
      */
     override fun deletePostById(
@@ -65,8 +78,8 @@ class PatronusPostControllerApi : PatronusPostsApi {
         xRequestId: UUID,
         xCorrelationId: UUID,
     ): ResponseEntity<Unit> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+        postService.deleteById(id)
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build()
     }
 
     /**
@@ -74,31 +87,64 @@ class PatronusPostControllerApi : PatronusPostsApi {
      *
      * @param id The ID of the post to retrieve.
      * @param xRequestId The x-request-id of the call
-     * @param xCorrelationId The correlation Id associated to the flow o calls
+     * @param xCorrelationId The correlation ID associated with the flow of calls
      * @return A [ResponseEntity] containing the [PostResponse] and HTTP status.
      */
     override fun getPostById(
         id: UUID,
         xRequestId: UUID,
         xCorrelationId: UUID,
-    ): ResponseEntity<PostResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
+    ): ResponseEntity<PostResponse> = ResponseEntity.ok(postService.findById(id))
 
     /**
-     * Retrieves all posts.
+     * Retrieves all posts with pagination, sorting, and filtering.
      *
      * @param xRequestId The x-request-id of the call
-     * @param xCorrelationId The correlation Id associated to the flow o calls
-     * @return A [ResponseEntity] containing a list of [PostResponse] and HTTP status.
+     * @param xCorrelationId The correlation ID associated with the flow of calls
+     * @param page The page number (0-based)
+     * @param size The number of posts per page
+     * @param sort The sort criteria in the format "field,direction" (e.g., "createdAt,desc")
+     * @param userId The ID of the user to filter posts by (optional)
+     * @param search The search term to filter posts by content (optional)
+     * @return A [ResponseEntity] containing a [PagedResponse] of [PostResponse] and HTTP status.
      */
+
     override fun getPosts(
         xRequestId: UUID,
         xCorrelationId: UUID,
-    ): ResponseEntity<List<PostResponse>> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+        page: Int,
+        size: Int,
+        sort: String,
+        userId: UUID?,
+        search: String?,
+    ): ResponseEntity<PagedResponsePostResponse> {
+        require(page < 0) { "Page cannot be negative" }
+        require(size <= 0) { "Size cannot be negative" }
+
+        val sortParts = sort.split(",")
+        require(sortParts.size != 2 || sortParts[0].isBlank() || !listOf("asc", "desc").contains(sortParts[1].lowercase())) {
+            "error on field ascendent"
+        }
+        val sortField = sortParts[0]
+        val sortDirection = sortParts[1]
+
+        require(!listOf("content", "createdAt", "created_at").contains(sortField.lowercase())) {
+            "sort field not available"
+        }
+
+        val sanitizedSearch = search?.takeIf { it.isNotBlank() }?.trim()
+
+        val pagedResponsePostResponse =
+            postService.findAll(
+                page,
+                size,
+                sortField,
+                sortDirection,
+                userId,
+                sanitizedSearch,
+            )
+
+        return ResponseEntity.ok(pagedResponsePostResponse)
     }
 
     /**
@@ -106,7 +152,7 @@ class PatronusPostControllerApi : PatronusPostsApi {
      *
      * @param id The ID of the post to update.
      * @param xRequestId The x-request-id of the call
-     * @param xCorrelationId The correlation Id associated to the flow o calls
+     * @param xCorrelationId The correlation ID associated with the flow of calls
      * @param postRequest The request body containing the updated details of the post.
      * @return A [ResponseEntity] containing the updated [PostResponse] and HTTP status.
      */
@@ -116,7 +162,8 @@ class PatronusPostControllerApi : PatronusPostsApi {
         xCorrelationId: UUID,
         postRequest: PostRequest,
     ): ResponseEntity<PostResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+        require(postRequest.content.isNullOrBlank()) { "No Content was provided" }
+        val postResponse: PostResponse = postService.update(postRequest, id)
+        return ResponseEntity.ok(postResponse)
     }
 }
